Creación del formulario HTML de asiento

--- a/tfg/apptfg/templates/index.html
+++ b/tfg/apptfg/templates/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Plantilla index</title>
-</head>
-<body>
-	<div class="container">
-		<h1>
-			Primer Blog
-		</h1>
-		<h2>
-			Titulo
-		</h2>
-		<h3>
-			Publicado el día por el autor
-		</h3>
-		<p>
-			Contenido
-		</p>
-</div>
-</body>
+	<head>
+		<title>Formulario asiento</title>
+	</head>
+	<h1> Formulario asiento nuevo </h1>
+	<body>
+		Fecha <input type="text" name="fecha" />
+		N&uacute;m <input type="text" name="num" />
+		Descripci&oacute;n <input type="text" name="descripcion" />
+		Cuenta origen <input type="text" name="origen" />
+		Cuenta destino <input type="text" name="destino" />
+		R ? <input type="text" name="r" />
+		Importe <input type="text" name="importe" />
+	</body>
 </html>
