Formato al formulario

--- a/tfg/apptfg/templates/index.html
+++ b/tfg/apptfg/templates/index.html
@@ -5,11 +5,11 @@
 	</head>
 	<h1> Formulario asiento nuevo </h1>
 	<body>
-		Fecha <input type="text" name="fecha" />
-		N&uacute;m <input type="text" name="num" />
-		Descripci&oacute;n <input type="text" name="descripcion" />
+		Fecha <input type="text" name="fecha" /> <br/>
+		N&uacute;m <input type="text" name="num" /> <br/>
+		Descripci&oacute;n <input type="text" name="descripcion" /> <br/>
 		Cuenta origen <input type="text" name="origen" />
-		Cuenta destino <input type="text" name="destino" />
+		Cuenta destino <input type="text" name="destino" /> <br/>
 		R ? <input type="text" name="r" />
 		Importe <input type="text" name="importe" />
 	</body>
